// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image component should be 32x32 1`] = `
<figure
  className="image is-32x32"
>
  <img
    src="http://mydomain.com/image"
  />
</figure>
`;

exports[`Image component should be square 1`] = `
<figure
  className="image is-square"
>
  <img
    src="http://mydomain.com/image"
  />
</figure>
`;

exports[`Image component should exist 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "defaultProps": Object {
    "as": "figure",
  },
  "render": [Function],
}
`;

exports[`Image component should have image classname 1`] = `
<figure
  className="image"
>
  <img
    src="http://mydomain.com/image"
  />
</figure>
`;
